# typing-examples

./: .gitignore  README.md  pyproject.toml
examples/: type_narrowing_generic_result.py
examples/circular_imports/: file_a.py
typing_examples/circular_imports/: file_b.py
