[tool.poetry]
name = "typing-examples"
version = "0.1.0"
description = "Extensive guide to static typing in python"
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ruff = "0.6.4"
mypy = "1.11.2"

[tool.ruff]
line-length = 119

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
pretty = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
